--- a/src/pages/News/News.css
+++ b/src/pages/News/News.css
@@ -34,10 +34,11 @@
     height: 500px;
     width: 500px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 10px;
+    margin: 50px;
     margin-left: auto;
     margin-right: auto;
     border-radius: 20px;
+    background-color: white;
 }
 
 .news_image {
