--- a/src/pages/XPercent/XPercent.css
+++ b/src/pages/XPercent/XPercent.css
@@ -62,4 +62,7 @@
     font-size: 20px;
     line-height: 46px;
     margin-left: calc(50% - 200px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
