--- a/src/pages/News/News.css
+++ b/src/pages/News/News.css
@@ -1,3 +1,8 @@
+.news_container {
+  z-index: 2;
+  position: relative;
+}
+
 .news_title_container {
     display: flex;
     justify-content: center;
@@ -6,26 +11,15 @@
 
 .news_title {
     text-align: center;
-    color: black;
-    font-size: 20px;
+    color: #990000;
+    font-size: 25px;
     font-weight: 700;
     position: relative;
     width: 80px;
 }
 
-.news_title:before {
-    content: '';
-    background: url('../../../public/assets/title-under-bar.png');
-    width: 50px;
-    height: 10px;
-    position: absolute;
-    left: 0;
-    z-index: -1;
-    top: 15px;
-}
-
 .news_slide_container {
-    width: 80%;
+    width: 2000px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -39,6 +33,15 @@
     margin-right: auto;
     border-radius: 20px;
     background-color: white;
+    transition: all 0.5s;
+}
+
+@media only screen and (min-width: 900px)
+{
+  .news_slide:hover {
+    transform: translateY(-20px);
+    transition: all 0.5s;
+  }
 }
 
 .news_image {
@@ -87,5 +90,132 @@
     .news_link_button {
       min-width: 40px;
       padding: 0 5px;
+    }
+  }
+
+  @media only screen and (max-width: 2000px) {
+    .news_slide_container {
+      width: 1600px;
+    }
+
+    .news_slide {
+      height: 450px;
+      width: 450px;
+    }
+
+    .news_image img {
+      height: 160px;
+    }
+
+    .news_content {
+      padding: 20px;
+    }
+  }
+
+  @media only screen and (max-width: 1600px) {
+    .news_slide_container {
+      width: 1200px;
+    }
+
+    .news_slide {
+      height: 400px;
+      width: 400px;
+    }
+
+    .news_image img {
+      height: 120px;
+    }
+
+    .news_content {
+      padding: 10px;
+    }
+  }
+
+  @media only screen and (max-width: 1200px) {
+    .news_slide_container {
+      width: 800px;
+    }
+
+    .news_slide {
+      height: 350px;
+      width: 350px;
+    }
+
+    .news_image img {
+      height: 100px;
+    }
+
+    .news_content {
+      padding: 10px;
+      font-size: 12px;
+    }
+  }
+
+  @media only screen and (max-width: 800px) {
+    .news_slide_container {
+      width: 480px;
+    }
+
+    .news_title_container {
+      margin-bottom: 0px;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .news_slide_container {
+      width: 350px;
+    }
+
+    .news_slide {
+      height: 300px;
+      width: 250px;
+    }
+
+    .news_image img {
+      height: 70px;
+    }
+
+    .news_content {
+      padding: 10px;
+      font-size: 10px;
+    }
+
+    .news_content h6 {
+      font-size: 14px;
+    }
+  }
+
+  .swiper_container {
+    width: 350px;
+  }
+
+  @media only screen and (min-width: 600px) {
+    .swiper_container {
+      width: 480px;
+    }
+  }
+
+  @media only screen and (min-width: 800px) {
+    .swiper_container {
+      width: 800px;
+    }
+  }
+
+
+  @media only screen and (min-width: 1200px) {
+    .swiper_container {
+      width: 1200px;
+    }
+  }
+
+  @media only screen and (min-width: 1600px) {
+    .swiper_container {
+      width: 1600px;
+    }
+  }
+
+  @media only screen and (min-width: 2000px) {
+    .swiper_container {
+      width: 2000px;
     }
   }
