--- a/src/pages/Recruitment/Recruitment.css
+++ b/src/pages/Recruitment/Recruitment.css
@@ -1,6 +1,6 @@
 .recruitment_container {
     background-color: transparent;
-    z-index: -10000;
+    z-index: 2;
     position: relative;
     height: 810px;
     margin-top: -450px;
@@ -17,12 +17,13 @@
     margin-right: auto;
     position: relative;
     z-index: -2;
+    border-radius: 20px;
 }
 
 .recruitment_title {
     text-align: center;
     color: white;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 700;
     position: relative;
     width: auto !important;
@@ -39,19 +40,30 @@
     margin: 50px 0 !important;
 }
 
-.recruitment_title:before {
-    content: '';
-    background: url('../../../public/assets/title-under-bar.png');
-    width: 50px;
-    height: 10px;
-    position: absolute;
-    left: 0;
-    z-index: -1;
-    top: 15px;
-}
-
 .recruitment_info {
     padding: 20px !important;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+.recruitment_show1 {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 1s;
+}
+
+.recruitment_show2 {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 1s;
+    transition-delay: 0.1s;
+}
+
+.recruitment_show3 {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 1s;
+    transition-delay: 0.1s;
 }
 
 .recruitment_info_container {
@@ -62,6 +74,11 @@
     height: 390px;
 }
 
+.recruitment_content_container {
+    padding: 0 300px;
+    display: flex;
+}
+
 .recruitment_info_title {
     padding: 50px 40px 30px 40px;
     color: #7ec2be;
@@ -70,7 +87,7 @@
 
 .divider {
     border-top: solid 2px #93a0a8;
-    margin: 0 40px;
+    margin: 0 30px;
 }
 
 .recruitment_info_content_title {
@@ -92,4 +109,165 @@
     position: absolute;
     left: 50px;
     top: 4px;
+}
+
+@media only screen and (max-width: 2200px) {
+    .recruitment_info_title {
+        font-size: 18px;
+    }
+    .recruitment_info_content_body {
+        font-size: 18px;
+    }
+    .recruitment_info_content_title {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 2090px) {
+    .recruitment_content_container {
+        padding: 0 150px;
+    }
+}
+
+@media only screen and (max-width: 1715px) {
+    .recruitment_info_content_title {
+        font-size: 17px;
+        color: white;
+        padding: 20px 30px 0 30px;
+    }
+    .recruitment_info_title {
+        padding: 40px 30px 20px 30px;
+        color: #7ec2be;
+        font-size: 17px;
+    }
+    .recruitment_info_content_body {
+        font-size: 17px;
+        padding: 10px 40px 0 60px;
+    }
+    .recruitment_info_container {
+        height: 350px;
+    }
+}
+
+@media only screen and (max-width: 1590px) {
+    .recruitment_info_content_title {
+        font-size: 17px;
+        color: white;
+        padding: 10px 20px 0 20px;
+    }
+    .recruitment_info_title {
+        padding: 30px 20px 10px 20px;
+        color: #7ec2be;
+        font-size: 17px;
+    }
+    .recruitment_info_content_body {
+        font-size: 17px;
+        padding: 10px 40px 0 30px;
+    }
+    .recruitment_info_container {
+        height: 350px;
+    }
+    .recruitment_info_content_body:before{
+        content: '.';
+        position: absolute;
+        left: 20px;
+        top: 4px;
+    }
+    .divider {
+        margin: 0 20px;
+    }
+    .recruitment_content_container {
+        padding: 0 50px;
+    }
+}
+
+@media only screen and (max-width: 1265px) {
+    .recruitment_info_content_title {
+        font-size: 15px;
+        color: white;
+        padding: 10px 20px 0 20px;
+    }
+    .recruitment_info_title {
+        padding: 30px 20px 10px 20px;
+        color: #7ec2be;
+        font-size: 15px;
+    }
+    .recruitment_info_content_body {
+        font-size: 15px;
+        padding: 10px 40px 0 30px;
+    }
+    .recruitment_info_container {
+        height: 350px;
+    }
+    .recruitment_info_content_body:before{
+        content: '.';
+        position: absolute;
+        left: 20px;
+        top: 4px;
+    }
+    .divider {
+        margin: 0 20px;
+    }
+    .recruitment_content_container {
+        padding: 0 50px;
+    }
+    .recruitment_info_container {
+        height: 300px;
+    }
+}
+
+@media only screen and (max-width: 1170px) {
+    .recruitment_content_container {
+        padding: 0 10px;
+    }
+
+    .recruitment_info {
+        padding: 10px !important;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .recruitment_container {
+        margin-top: -10px;
+    }
+
+    .recruitment_background {
+        background-position: center center;
+        width: 100%;
+        border-radius: 0;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .recruitment_title {
+        margin: 50px 0 50px 0 !important;
+    }
+
+    .recruitment_content {
+        margin: 10px 0 30px 0 !important;
+        font-size: 17px;
+    }
+
+    .recruitment_content_container {
+        display: block;
+    }
+
+    .recruitment_info {
+        width: 100% !important;
+    }
+
+    .recruitment_info_container {
+        height: 210px;
+    }
+
+    .recruitment_container {
+        height: 900px;
+        margin-bottom: 50px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .recruitment_content {
+        font-size: 14px;
+    }
 }
