--- a/src/pages/Header/Header.css
+++ b/src/pages/Header/Header.css
@@ -120,209 +120,214 @@
 @media only screen and (max-width: 800px)
 {
 
-  .header {
-    position: relative;
-  }
+    .logo img {
+        width: 100px;
+        margin: 15px 20px 0 20px;
+    }
 
-  .header .col-2 {
-    display: none;
-  }
+    .logo {
+        line-height: 0px;
+    }
 
-  .header .col-10 {
-    display: none;
-  }
+    .header {
+        position: relative;
+    }
 
-  .menu {
-    display: none;
-  }
+    .header .col-10 {
+        display: none;
+    }
+
+    .menu {
+        display: none;
+    }
 
     /* Toggle Functionality */
     #toggle {
-      display: none;
-  }
-  
-  .toggle-container {
-      display: flex;
-  }
+        display: none;
+    }
 
-  a {
-      text-decoration: none !important;
-  }
-  
-  .nav {
-      display: flex !important;
-  }
+    .toggle-container {
+        display: flex;
+    }
 
-  #toggle:checked ~ .image_container {
-      top: 280px;
-      transition: all 0.5s;
-  }
+    a {
+        text-decoration: none !important;
+    }
 
-  #toggle:checked ~ .toggle-container .button-toggle {
-      box-shadow: 0 0 0 800px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
-  }
-  #toggle:checked ~ .toggle-container .button-toggle:before {
-      transform: translateY(-50%) rotate(45deg) scale(1);
-  }
-  #toggle:checked ~ .toggle-container .button-toggle:after {
-      transform: translateY(-50%) rotate(-45deg) scale(1);
-  }
-  #toggle:checked ~ .nav {
-      margin-bottom: 100px;
-      pointer-events: auto;
-      transform: translate(50px, 50px);
-  }
-  #toggle:checked ~ .nav .nav-item {
-      color: #EC7263;
-      letter-spacing: 0;
-      height: 40px;
-      line-height: 40px;
-      margin-top: 0;
-      opacity: 1;
-      transform: scaleY(1);
-      transition: 0.5s, opacity 0.1s;
-      font-size: 20px;
-  }
-  #toggle:checked ~ .nav .nav-item:nth-child(1) {
-      transition-delay: 0.15s;
-  }
-  #toggle:checked ~ .nav .nav-item:nth-child(1):before {
-      transition-delay: 0.15s;
-  }
-  #toggle:checked ~ .nav .nav-item:nth-child(2) {
-      transition-delay: 0.1s;
-  }
-  #toggle:checked ~ .nav .nav-item:nth-child(2):before {
-      transition-delay: 0.1s;
-  }
-  #toggle:checked ~ .nav .nav-item:nth-child(3) {
-      transition-delay: 0.05s;
-  }
-  #toggle:checked ~ .nav .nav-item:nth-child(3):before {
-      transition-delay: 0.05s;
-  }
-  #toggle:checked ~ .nav .nav-item:nth-child(4) {
-      transition-delay: 0s;
-  }
-  #toggle:checked ~ .nav .nav-item:nth-child(4):before {
-      transition-delay: 0s;
-  }
-  #toggle:checked ~ .nav .nav-item:before {
-      opacity: 0;
-  }
-  #toggle:checked ~ .dummy-content {
-      padding-top: 30px;
-  }
-  #toggle:checked ~ .dummy-content:before {
-      background-color: rgba(0, 0, 0, 0.3);
-  }
+    .nav {
+        display: flex !important;
+    }
 
-  /* Toggle Button */
-  .button-toggle {
-      position: absolute;
-      display: inline-block;
-      width: 20px;
-      height: 20px;
-      margin: 20px 32px;
-      background-color: transparent;
-      border: none;
-      cursor: pointer;
-      border-radius: 100%;
-      transition: 0.6s;
-  }
-  .button-toggle:hover {
-      box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
-  }
-  .button-toggle:before, .button-toggle:after {
-      position: absolute;
-      content: "";
-      top: 50%;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      background-color: #EC7263;
-      border-radius: 5px;
-      transition: 0.5s;
-  }
-  .button-toggle:before {
-      transform: translateY(-50%) rotate(45deg) scale(0);
-  }
-  .button-toggle:after {
-      transform: translateY(50%) rotate(-45deg) scale(0);
-  }
+    #toggle:checked ~ .image_container {
+        top: 280px;
+        transition: all 0.5s;
+    }
 
-  /* Menu */
-  .nav {
-      display: inline-block;
-      margin: 20px 30px 20px;
-      pointer-events: none;
-      transition: 0.5s;
-      flex-direction: column;
-      width: 20px;
-  }
+    #toggle:checked ~ .toggle-container .button-toggle {
+        box-shadow: 0 0 0 800px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
+    }
+    #toggle:checked ~ .toggle-container .button-toggle:before {
+        transform: translateY(-50%) rotate(45deg) scale(1);
+    }
+    #toggle:checked ~ .toggle-container .button-toggle:after {
+        transform: translateY(-50%) rotate(-45deg) scale(1);
+    }
+    #toggle:checked ~ .nav {
+        margin-bottom: 100px;
+        pointer-events: auto;
+        transform: translate(-160px, 50px);
+    }
+    #toggle:checked ~ .nav .nav-item {
+        color: #EC7263;
+        letter-spacing: 0;
+        height: 40px;
+        line-height: 40px;
+        margin-top: 0;
+        opacity: 1;
+        transform: scaleY(1);
+        transition: 0.5s, opacity 0.1s;
+        font-size: 20px;
+    }
+    #toggle:checked ~ .nav .nav-item:nth-child(1) {
+        transition-delay: 0.15s;
+    }
+    #toggle:checked ~ .nav .nav-item:nth-child(1):before {
+        transition-delay: 0.15s;
+    }
+    #toggle:checked ~ .nav .nav-item:nth-child(2) {
+        transition-delay: 0.1s;
+    }
+    #toggle:checked ~ .nav .nav-item:nth-child(2):before {
+        transition-delay: 0.1s;
+    }
+    #toggle:checked ~ .nav .nav-item:nth-child(3) {
+        transition-delay: 0.05s;
+    }
+    #toggle:checked ~ .nav .nav-item:nth-child(3):before {
+        transition-delay: 0.05s;
+    }
+    #toggle:checked ~ .nav .nav-item:nth-child(4) {
+        transition-delay: 0s;
+    }
+    #toggle:checked ~ .nav .nav-item:nth-child(4):before {
+        transition-delay: 0s;
+    }
+    #toggle:checked ~ .nav .nav-item:before {
+        opacity: 0;
+    }
+    #toggle:checked ~ .dummy-content {
+        padding-top: 30px;
+    }
+    #toggle:checked ~ .dummy-content:before {
+        background-color: rgba(0, 0, 0, 0.3);
+    }
 
-  .nav-item {
-      position: relative;
-      display: inline-block;
-      float: left;
-      clear: both;
-      color: transparent;
-      font-size: 14px;
-      font-weight: bold;
-      letter-spacing: -6.2px;
-      height: 7px;
-      line-height: 7px;
-      text-transform: uppercase;
-      white-space: nowrap;
-      transform: scaleY(0.2);
-      transition: 0.5s, opacity 1s;
-      cursor: pointer;
-  }
-  .nav-item:nth-child(1) {
-      transition-delay: 0s;
-  }
-  .nav-item:nth-child(1):before {
-      transition-delay: 0s;
-  }
-  .nav-item:nth-child(2) {
-      transition-delay: 0.05s;
-  }
-  .nav-item:nth-child(2):before {
-      transition-delay: 0.05s;
-  }
-  .nav-item:nth-child(3) {
-      transition-delay: 0.1s;
-  }
-  .nav-item:nth-child(3):before {
-      transition-delay: 0.1s;
-  }
-  .nav-item:nth-child(4) {
-      transition-delay: 0.15s;
-  }
-  .nav-item:nth-child(4):before {
-      transition-delay: 0.15s;
-  }
-  .nav-item:nth-child(1) {
-      letter-spacing: -8px;
-  }
-  .nav-item:nth-child(2) {
-      letter-spacing: -7px;
-  }
-  .nav-item:nth-child(n+4) {
-      letter-spacing: -8px;
-      margin-top: -7px;
-      opacity: 0;
-  }
-  .nav-item:before {
-      position: absolute;
-      content: "";
-      top: 50%;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      background-color: #EC7263;
-      transform: translateY(-50%) scaleY(5);
-      transition: 0.5s;
-  }
+    /* Toggle Button */
+    .button-toggle {
+        position: absolute;
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        margin: 20px 32px;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        border-radius: 100%;
+        transition: 0.6s;
+    }
+    .button-toggle:hover {
+        box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
+    }
+    .button-toggle:before, .button-toggle:after {
+        position: absolute;
+        content: "";
+        top: 50%;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: #EC7263;
+        border-radius: 5px;
+        transition: 0.5s;
+    }
+    .button-toggle:before {
+        transform: translateY(-50%) rotate(45deg) scale(0);
+    }
+    .button-toggle:after {
+        transform: translateY(50%) rotate(-45deg) scale(0);
+    }
+
+    /* Menu */
+    .nav {
+        display: inline-block;
+        margin: 20px 30px 20px;
+        pointer-events: none;
+        transition: 0.5s;
+        flex-direction: column;
+        width: 20px;
+    }
+
+    .nav-item {
+        position: relative;
+        display: inline-block;
+        float: left;
+        clear: both;
+        color: transparent;
+        font-size: 14px;
+        font-weight: bold;
+        letter-spacing: -6.2px;
+        height: 7px;
+        line-height: 7px;
+        text-transform: uppercase;
+        white-space: nowrap;
+        transform: scaleY(0.2);
+        transition: 0.5s, opacity 1s;
+        cursor: pointer;
+    }
+    .nav-item:nth-child(1) {
+        transition-delay: 0s;
+    }
+    .nav-item:nth-child(1):before {
+        transition-delay: 0s;
+    }
+    .nav-item:nth-child(2) {
+        transition-delay: 0.05s;
+    }
+    .nav-item:nth-child(2):before {
+        transition-delay: 0.05s;
+    }
+    .nav-item:nth-child(3) {
+        transition-delay: 0.1s;
+    }
+    .nav-item:nth-child(3):before {
+        transition-delay: 0.1s;
+    }
+    .nav-item:nth-child(4) {
+        transition-delay: 0.15s;
+    }
+    .nav-item:nth-child(4):before {
+        transition-delay: 0.15s;
+    }
+    .nav-item:nth-child(1) {
+        letter-spacing: -8px;
+    }
+    .nav-item:nth-child(2) {
+        letter-spacing: -7px;
+    }
+    .nav-item:nth-child(n+4) {
+        letter-spacing: -8px;
+        margin-top: -7px;
+        opacity: 0;
+    }
+    .nav-item:before {
+        position: absolute;
+        content: "";
+        top: 50%;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: #EC7263;
+        transform: translateY(-50%) scaleY(5);
+        transition: 0.5s;
+    }
 }
 
