--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -28,7 +28,7 @@
 
 .image_content {
     color: white;
-    padding: 300px 0;
+    padding: 200px 0;
 }
 
 .content_img {
@@ -45,8 +45,8 @@
 }
 
 .main_container_content {
-    font-weight: 200; 
-    padding: 0 0 30px 0; 
+    font-weight: 400; 
+    padding: 10px 0 30px 0; 
     font-size: 20px;
     opacity: 0;
     transform: translateY(20px);
@@ -107,8 +107,8 @@
     }
     
     .main_container_content {
-        font-weight: 200; 
-        padding: 0 0 30px 0; 
+        font-weight: 400; 
+        padding: 10px 0 30px 0; 
         font-size: 17px;
     }
 }
