--- a/src/pages/XPercent/XPercent.css
+++ b/src/pages/XPercent/XPercent.css
@@ -1,16 +1,7 @@
-.xpercent_container {
-
-}
-
 .xpercent_grid_container {
-    height: 500px;
-    display: flex;
+    height: auto;
     justify-content: center;
-}
-
-.xpercent_grid_right img {
-    width: 500px;
-    height: 500px;
+    padding-bottom: 100px;
 }
 
 .xpercent_grid_left {
@@ -21,21 +12,21 @@
 }
 
 .xpercent_title {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     font-size: 25px;
     font-weight: 700;
     position: relative;
     z-index: 100;
-    margin-left: calc(50% - 200px);
-    color: #990000;
+    text-align: center;
+    color: #16334f;
     opacity: 0;
     transform: translateY(20px);
+    margin-top: 50px;
 }
 
 .xpercent_content {
     font-weight: 300;
     font-size: 20px;
-    margin-left: calc(50% - 200px);
     opacity: 0;
     transform: translateY(20px);
 }
@@ -78,10 +69,27 @@
     height: 500px;
 }
 
+.xpercent_text {
+    font-size: 15px;
+}
+
+@media only screen and (max-width: 1055px) {
+
+    .xpercent_text {
+        font-size: 14px;
+    }
+}
+
 @media only screen and (max-width: 1050px) {
     .xpercent_grid_right img {
         width: 400px;
         height: 400px;
+    }
+}
+
+@media only screen and (max-width: 990px) {
+    .xpercent_text {
+        font-size: 12px;
     }
 }
 
@@ -100,5 +108,29 @@
     }
     .xpercent_button {
         margin-left: 0;
+    }
+}
+
+@media only screen and (max-width: 860px) {
+    .xpercent_text {
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 770px) {
+    .xpercent_text {
+        font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 720px) {
+    .xpercent_grid_container {
+        max-width: 80%;
+    }
+    .xpercent_text {
+        font-size: 15px;
+    }
+    .signal_class {
+        margin-top: 30px;
     }
 }
