--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
 @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
+@font-face {
+  font-family: 'GmarketMedium';
+  src: local('GmarketMedium'), url(./fonts/GmarketSansTTFMedium.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'GmarketLight';
+  src: local('GmarketLight'), url(./fonts/GmarketSansTTFLight.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'GmarketBold';
+  src: local('GmarketBold'), url(./fonts/GmarketSansTTFBold.ttf) format('truetype');
+}
+
 body {
   margin: 0;
   font-family: 'Spoqa Han Sans Neo', 'sans-serif' !important;
