--- a/src/pages/XPercent/XPercent.css
+++ b/src/pages/XPercent/XPercent.css
@@ -73,6 +73,18 @@
     font-size: 15px;
 }
 
+.service_button {
+    font-size: 15px;
+    text-align: center;
+    background-color: #990000;
+    color: white;
+    padding: 10px 0;
+    margin-top: 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 1055px) {
 
     .xpercent_text {
