--- a/src/pages/Mission/Mission.css
+++ b/src/pages/Mission/Mission.css
@@ -3,14 +3,15 @@
     width: 100%;
     background-size: cover;
     height: 100%;
-    margin-top: 60px;
+    margin-top: 130px;
     z-index: -2;
 }
 
 .mission_grid_container {
     display: grid;
     grid-template-columns: 50% 50%;
-    height: 400px;
+    height: 500px;
+ 
 }
 
 .mission_grid_left {
@@ -50,16 +51,43 @@
     transform: translateY(0px);
     transition: all 1s;
 }
+@media only screen and (max-width: 2000px)
+{
+    .mission_container {
+       
+      
+        margin-top:0px;
+     
+    }
+}
+@media only screen and (max-width: 1350px) {
+    .mission_container {
+       
+      
+        margin-top: 0px;
+     
+    }
+}
 
 @media only screen and (max-width: 900px) {
+
     .mission_grid_container {
         display: flex;
         grid-template-columns: none;
         justify-content: center;
         align-items: center;
+
+        margin-top: 0;
     }
 
     .mission_grid_container .col-6 {
         display: none;
     }
+}
+@media only screen and (max-width: 800px) {
+    .mission_container {
+        
+        margin-top: -88px;
+    }
+
 }
