--- a/src/pages/Recruitment/Recruitment.css
+++ b/src/pages/Recruitment/Recruitment.css
@@ -3,7 +3,7 @@
     z-index: 2;
     position: relative;
     height: 810px;
-    margin-top: -450px;
+    /* margin-top: -450px; */
     margin-bottom: 100px;
 }
 
@@ -77,6 +77,8 @@
 .recruitment_content_container {
     padding: 0 100px;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .recruitment_info_title {
