--- a/src/pages/What/What.css
+++ b/src/pages/What/What.css
@@ -1,6 +1,7 @@
 .what_container {
     height: 600px;
-    margin-top: 200px;
+    margin-top: 100px;
+    margin-bottom: 100px;
     display: flex;
 }
 
