--- a/src/pages/Newsletter/Newsletter.css
+++ b/src/pages/Newsletter/Newsletter.css
@@ -2,6 +2,7 @@
     background-color: #374351;
     position: relative;
     padding-bottom: 100px;
+    padding-top: 100px;
 }
 
 .newsletter_title {
