--- a/src/pages/Header/Header.css
+++ b/src/pages/Header/Header.css
@@ -63,6 +63,10 @@
     animation-delay: 0.4s;
 }
 
+.menu_item:nth-child(6) {
+    animation-delay: 0.5s;
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
