--- a/src/pages/RATB/navbar.css
+++ b/src/pages/RATB/navbar.css
@@ -10,10 +10,12 @@ nav{
 	background-color: #282828;
 	padding:2rem 1rem 1rem 1rem;
 	transition: transform 1s;
+    z-index: 999999;
 }
 
 .navbar{
 	transform: translateX(-100%);
+    position: absolute;
 }
 
 .nav-btn{
