--- a/src/pages/RATB/index.css
+++ b/src/pages/RATB/index.css
@@ -11,7 +11,6 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	height: 100vh;
 }
 
 .page{
@@ -28,6 +27,20 @@
 	.page-with-navbar{
 		width: 100%;
 		margin-left: 0;
+	}
+
+    .mobile-nav{
+		display: flex;
+		align-items: center;
+	}
+	nav{
+		width: 70%;
+		top: 38px;
+		min-height: calc(100vh - 38px);
+	}
+
+	.nav-btn{
+		display: none;
 	}
 
 }
@@ -67,6 +80,7 @@
     font-size: 12px;
     width: 100px;
     text-align: center;
+    cursor: pointer;
 }
 
 .portfolio-header-select {
