make it responsive

--- a/src/pages/Enterprises/Service/EnterprisesService.css
+++ b/src/pages/Enterprises/Service/EnterprisesService.css
@@ -199,6 +199,13 @@ table td {
     align-items: center;
      
     }
+    .enterprises_service_table_responsive {
+      overflow-x: auto;
+      width: 98%;
+      
+
+      
+    }
   }
 
 
