--- a/src/pages/Enterprises/LoginPage/EnterprisesLogin.css
+++ b/src/pages/Enterprises/LoginPage/EnterprisesLogin.css
@@ -10,6 +10,8 @@
 
 }
 
+
+
 .logoSection {
 
   width: 580px;
@@ -61,14 +63,25 @@ input[type="password"] {
   border: 1px solid #ccc;
   border-radius: 3px;
 }
-.enterprise_login_btn {
+.loginContainer .formSection .enterprise_form_wrapper{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+.loginContainer .formSection .enterprise_form_wrapper .enterprise_form_input_group{
+  display: flex;
+  flex-direction: column;
+}
+
+.formSection .enterprise_form_wrapper .enterprise_login_btn {
   background-color: #007bff;
   color: #fff;
   padding: 10px 20px;
   border: none;
   border-radius: 3px;
   cursor: pointer;
-  height: 106px;
+  height: 113px;
   width: 109px;
 }
 .enterprise_login_btn:hover {
@@ -86,6 +99,29 @@ input[type="password"] {
   /* Style for the service info section */
 }
 @media only screen and (max-width: 480px) and (min-width: 220px) {
+
+  .loginContainer .formSection .enterprise_form_wrapper{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  
+  }
+  .loginContainer .formSection .enterprise_form_wrapper .enterprise_form_input_group{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .formSection .enterprise_form_wrapper .enterprise_login_btn {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    height: 113px;
+    width: 109px;
+  }
+
   .logoSection {
     height: 174px;
     width: 340px;
@@ -107,7 +143,7 @@ input[type="password"] {
    }
    .inputGroup {
   
-    width:  180px;
+    width:  197px;
 
   
   }
